--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.application.name=coffee-shop
 spring.datasource.url=jdbc:mysql://localhost:3306/coffee_shop?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+app.jwtSecret=3bH4m9Qp2RtS7uWx
+app.jwtExpirationMs=86400000
